@@ -32,7 +32,7 @@ BOOL CollectionManagerDialog::OnInitDialog()
 
     ListView_SetExtendedListViewStyle(hListHwnd, LVS_EX_FULLROWSELECT | LVS_EX_GRIDLINES);
 
-    LVCOLUMN lvcol;
+    LVCOLUMN lvcol = {};
     lvcol.mask = LVCF_TEXT | LVCF_WIDTH;
     const LocalString ls(IDS_NAME);
     lvcol.pszText = (LPSTR)ls.m_szbuffer; // = "Name";
